add some missing dependecies

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nodemailer-mailgun-transport": "^2.0.0",
     "nodemailer-mandrill-transport": "^1.2.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "nunjucks": "^3.2.1",
     "progress": "^2.0.3",
     "prompt": "^1.0.0",
     "q": "^1.5.0",
